feat(auth): signup user
