# src/interface/http/controllers/auth.controller.ts
@@ -3,12 +3,14 @@ import {
   Controller,
   OperationId,
   Post,
+  Response,
   Route,
   SuccessResponse,
   Tags,
 } from 'tsoa';
 import authUseCase from '../../../app/usecases/auth';
 import { IIndividualSignupReq } from '../../../app/contracts/dto/auth.dto';
+import { IApiError } from '../../../app/contracts/dto/errors.dto';
 
 @Route('auth')
 @Tags('Auth')
@@ -18,7 +20,12 @@ export class AuthController extends Controller {
    */
   @Post('/signup-with-email')
   @OperationId('signupWithEmail')
-  @SuccessResponse('200')
+  @SuccessResponse('201')
+  @Response<IApiError>('400')
+  @Response<IApiError>('403')
+  @Response<IApiError>('409')
+  @Response<IApiError>('500')
+  @Response<IApiError>('422')
   public async signupWithEmail(@Body() body: IIndividualSignupReq) {
     return authUseCase.signupWithEmail(body);
   }
